movie-booking-system-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /dummy
            backend:
              service:
                name: dummy-service
                port:
                  number: 80
          - pathType: Prefix
            path: /movie
            backend:
              service:
                name: movie-service
                port:
                  number: 80
